--- a/pyVerein/members/templates/members/member_create.html
+++ b/pyVerein/members/templates/members/member_create.html
@@ -17,7 +17,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="main-narrow">
+    <div class="main-narrow form">
         <div class="detail-content  mdc-elevation--z4">
             <form action="{% url 'members:create' %}" method="POST" id="form">
                 {% include 'members/member_form_fields.html' %}
