--- a/pyVerein/finance/templates/finance/creditor/edit.html
+++ b/pyVerein/finance/templates/finance/creditor/edit.html
@@ -18,7 +18,7 @@
 {% endblock title %}
 
 {% block content %}
-    <div class="main-narrow">
+    <div class="main-narrow form">
         <div class="detail-content  mdc-elevation--z4">
             <form action="{% url 'finance:creditor_edit' creditor.pk %}" method="POST" id="form">
                 {% csrf_token %}
