--- a/pyVerein/finance/templates/finance/impersonal/create.html
+++ b/pyVerein/finance/templates/finance/impersonal/create.html
@@ -15,7 +15,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="main-narrow">
+    <div class="main-narrow form">
         <div class="detail-content  mdc-elevation--z4">
             <form action="{% url 'finance:impersonal_create' %}" method="POST" id="form">
                 {% csrf_token %}
