--- a/pyVerein/members/templates/members/member_detail.html
+++ b/pyVerein/members/templates/members/member_detail.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="main-narrow">
+    <div class="main-narrow form">
         <div class="detail-content mdc-elevation--z4">
             <div class="heading mdc-typography--overline">
                 {% trans 'Personal Data' %}
