Fixed datatables css

--- a/material.io/sass/app.scss
+++ b/material.io/sass/app.scss
@@ -68,21 +68,24 @@ section.main{
         height: 50px;
     }
 }
-div.dataTables_length{
-    .mdc-select{
-    width: 150px;
-    margin-top: 15px;
+div.dataTables_wrapper{
+    div.dataTables_length{
+        .mdc-select{
+        width: 150px;
+        margin-top: 15px;
+        }
+    }
+    div.dataTables_filter {
+        input{
+            margin-left: 0px;
+        }
+        
+        .mdc-text-field{
+            width: 220px;
+        }
     }
 }
-div.dataTables_filter {
-    input{
-        margin-left: 0px;
-    }
-    
-    .mdc-text-field{
-        width: 220px;
-    }
-}
+
 .mdl-data-table td, 
 .mdl-data-table th{
     font-size: 16px;
