Added link titles

--- a/pyVerein/app/templates/app/_attributions.html
+++ b/pyVerein/app/templates/app/_attributions.html
@@ -12,11 +12,11 @@
                     Standard Avatar-Image
                 </h3>
                 <span class="mdc-typography--overline">Free avatars flat icons</span> by Dmitriy Bondarchuk<br />
-                Published under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" >CC BY-NC-ND 4.0</a> at <a href="https://www.behance.net/gallery/47035405/Free-avatars-flat-icons">behance.net</a>
+                Published under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" title="{% trans 'CC BY-NC-ND 4.0' %}" >CC BY-NC-ND 4.0</a> at <a href="https://www.behance.net/gallery/47035405/Free-avatars-flat-icons" title="{% trans 'Open at behance.net' %}">behance.net</a>
             </p>
         </section>
         <footer class="mdc-dialog__footer">
-            <button type="button" class="mdc-button mdc-dialog__footer__button mdc-dialog__footer__button--cancel mdc-button--outlined">{% trans 'Close' %}</button>
+            <button type="button" class="mdc-button mdc-dialog__footer__button mdc-dialog__footer__button--cancel mdc-button--outlined" title="{% trans 'Close' %}">{% trans 'Close' %}</button>
         </footer>
     </div>
 </aside>
