--- a/pyVerein/finance/templates/finance/debitor/create.html
+++ b/pyVerein/finance/templates/finance/debitor/create.html
@@ -31,8 +31,8 @@
                         {% include "utils/_textfield.html" with field=form.name label=name_label %}
                     </div>
                 <div class="form-group form-submit">
-                    <input type="submit" class="mdc-button mdc-button--raised" value="{% trans 'Save' %}" />
-                    <a href="{% url 'finance:debitor_list' %}" class="mdc-button">{% trans 'Cancel' %}</a>
+                    <input type="submit" class="mdc-button mdc-button--raised" value="{% trans 'Save' %}" title="{% trans 'Save' %}" />
+                    <a href="{% url 'finance:debitor_list' %}" class="mdc-button" title="{% trans 'Cancel' %}">{% trans 'Cancel' %}</a>
                 </div>
             </form>
         </div>
