--- a/pyVerein/app/templates/app/base.html
+++ b/pyVerein/app/templates/app/base.html
@@ -70,7 +70,7 @@
         </section>
         {% include "app/_attributions.html" %}
         <footer id="page-footer">
-            pyVerein by Jannik Heuer&nbsp;|&nbsp;<a href="javascript:showAttributions();" class="mdc-theme--on-primary">{% trans 'Attributions' %}</a>
+            pyVerein by Jannik Heuer&nbsp;|&nbsp;<a href="javascript:showAttributions();" class="mdc-theme--on-primary" title="{% trans 'Attributions' %}">{% trans 'Attributions' %}</a>
         </footer>
     </div>
 
@@ -109,7 +109,7 @@
                         y: 70
                     },
                     template: '<div data-notify="container" class="alert alert-{0} ' + message['tags'] + '">' +
-                        '<button aria-hidden="true" class="mdc-button close" data-notify="dismiss"><i class="mdc-button__icon fa fa-times" aria-hidden="true"></i></button>' +
+                        '<button aria-hidden="true" class="mdc-button close" data-notify="dismiss" title="{% trans 'Dismiss' %}"><i class="mdc-button__icon fa fa-times" aria-hidden="true"></i></button>' +
                         '<span data-notify="message">{2}</span>' +
                     '</div>'
                 });
@@ -146,7 +146,7 @@
                         y: 70
                     },
                     template: '<div data-notify="container" class="alert alert-{0} error">' +
-                        '<button aria-hidden="true" class="mdc-button close" data-notify="dismiss"><i class="mdc-button__icon fa fa-times" aria-hidden="true"></i></button>' +
+                        '<button aria-hidden="true" class="mdc-button close" data-notify="dismiss" title="{% trans 'Dismiss' %}"><i class="mdc-button__icon fa fa-times" aria-hidden="true"></i></button>' +
                         '<span data-notify="message">{2}</span>' +
                     '</div>'
                 });
