--- a/pyVerein/finance/templates/finance/costobject/create.html
+++ b/pyVerein/finance/templates/finance/costobject/create.html
@@ -36,8 +36,8 @@
                     {% include "utils/_textarea.html" with field=form.description label=description_label %}
                 </div>
                 <div class="form-group form-submit">
-                    <input type="submit" class="mdc-button mdc-button--raised" value="{% trans 'Save' %}" />
-                    <a href="{% url 'finance:costobject_list' %}" class="mdc-button">{% trans 'Cancel' %}</a>
+                    <input type="submit" class="mdc-button mdc-button--raised" value="{% trans 'Save' %}" title="{% trans 'Save' %}" />
+                    <a href="{% url 'finance:costobject_list' %}" class="mdc-button" title="{% trans 'Cancel' %}">{% trans 'Cancel' %}</a>
                 </div>
             </form>
         </div>
