--- a/pyVerein/finance/templates/finance/creditor/list.html
+++ b/pyVerein/finance/templates/finance/creditor/list.html
@@ -27,7 +27,7 @@
             </tr>
         </thead>
     </table>
-    <a href ="{% url 'finance:creditor_create' %}" class="mdc-fab mdc-fab--absolute-bottom-right" aria-label="">
+    <a href ="{% url 'finance:creditor_create' %}" class="mdc-fab mdc-fab--absolute-bottom-right" aria-label="" title="{% trans 'Add' %}">
         <i class="mdc-fab__icon fa fa-plus"></i>
     </a>
 {% endblock %}
