--- a/pyVerein/finance/templates/finance/transaction/list.html
+++ b/pyVerein/finance/templates/finance/transaction/list.html
@@ -33,7 +33,7 @@
             </tr>
         </thead>
     </table>
-    <a href ="{% url 'finance:transaction_create' %}" class="mdc-fab mdc-fab--absolute-bottom-right" aria-label="">
+    <a href ="{% url 'finance:transaction_create' %}" class="mdc-fab mdc-fab--absolute-bottom-right" aria-label="" title="{% trans 'Add' %}">
         <i class="mdc-fab__icon fa fa-plus"></i>
     </a>
 {% endblock %}
@@ -82,14 +82,14 @@
                         {
                             "data": "document_number",
                             "fnCreatedCell": function (nTd, sData, oData, iRow, iCol) {
-                                $(nTd).html("<a href='" + oData.transaction_url + "'>" + oData.document_number + "</a>");
+                                $(nTd).html("<a href='" + oData.transaction_url + "' title='{% trans 'Show receipt' %}'>" + oData.document_number + "</a>");
                             },
                             "className": "mdl-data-table__cell--non-numeric"
                         },
                         {
                             "data": "account",
                             "fnCreatedCell": function (nTd, sData, oData, iRow, iCol) {
-                                $(nTd).html("<a href='" + oData.account_url + "'>" + oData.account + "</a>");
+                                $(nTd).html("<a href='" + oData.account_url + "' title='{% trans 'Show account' %}'>" + oData.account + "</a>");
                             },
                             "className": "mdl-data-table__cell--non-numeric"
                         },
@@ -106,14 +106,14 @@
                         {
                             "data": "cost_center",
                             "fnCreatedCell": function (nTd, sData, oData, iRow, iCol) {
-                                $(nTd).html("<a href='" + oData.cost_center_url + "'>" + oData.cost_center + "</a>");
+                                $(nTd).html("<a href='" + oData.cost_center_url + "' title='{% trans 'Show cost center' %}'>" + oData.cost_center + "</a>");
                             },
                             "className": "mdl-data-table__cell--non-numeric"
                         },
                         {
                             "data": "cost_object",
                             "fnCreatedCell": function (nTd, sData, oData, iRow, iCol) {
-                                $(nTd).html("<a href='" + oData.cost_object_url + "'>" + oData.cost_object + "</a>");
+                                $(nTd).html("<a href='" + oData.cost_object_url + "' title='{% trans 'Show cost object' %}'>" + oData.cost_object + "</a>");
                             },
                             "className": "mdl-data-table__cell--non-numeric"
                         },
