--- a/pyVerein/members/templates/members/member_edit.html
+++ b/pyVerein/members/templates/members/member_edit.html
@@ -22,8 +22,8 @@
         <form action="{% url 'members:edit' member.pk %}" method="POST" id="form">
             {% include 'members/member_form_fields.html' %}
             <div class="form-group form-submit">
-                <input type="submit" class="mdc-button mdc-button--raised" value="{% trans 'Save' %}" />
-                <a href="{% url 'members:detail' pk=member.pk %}" class="mdc-button">{% trans 'Cancel' %}</a>
+                <input type="submit" class="mdc-button mdc-button--raised" value="{% trans 'Save' %}" title="{% trans 'Save' %}" />
+                <a href="{% url 'members:detail' pk=member.pk %}" class="mdc-button" title="{% trans 'Cancel' %}">{% trans 'Cancel' %}</a>
             </div>
         </form>
     </div>
